# editorconfig-notepad-plus-plus

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  build.ps1  init.ps1
.github/workflows/: CI_build.yml
src/: CMakeLists.txt  DlgAbout.cpp  DlgAbout.hpp  Notepad_plus_msgs.h  Notepad_plus_msgs.hpp  NppPluginEditorConfig.cpp  PluginDefinition.cpp  PluginDefinition.h  PluginDefinition.hpp  PluginInterface.h  PluginInterface.hpp  Resource.hpp  Sci_Position.hpp  Scintilla.h  Scintilla.hpp  menuCmdID.h  menuCmdID.hpp  version.rc.in
